Fix nav bar button right alignment

--- a/styles.css
+++ b/styles.css
@@ -156,7 +156,7 @@ h2 {
 }
 
 .nav-items {
-    width: 100%;
+
     display: flex;
     align-items: center;
     text-align: center;
@@ -176,6 +176,7 @@ p {
 .logo {
     height: 60px;
     align-items: center;
+
 }
 
 .subsection {
